--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ plugins {
 	id 'org.springframework.boot' version '2.3.1.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 	id 'java'
+	id 'groovy'
+
 }
 
 group = 'com.joseyustiz'
@@ -28,6 +30,10 @@ dependencies {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 	testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
+
+	testImplementation "org.codehaus.groovy:groovy-all:2.5.8"
+	testImplementation platform("org.spockframework:spock-bom:2.0-M1-groovy-2.5")
+	testImplementation "org.spockframework:spock-core"
 }
 
 test {
