--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,8 @@ repositories {
 }
 
 dependencies {
+	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.10'
+
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
