--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,9 @@ configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
 	}
+	intTestImplementation.extendsFrom testImplementation
+	intTestRuntime.extendsFrom testRuntime
+
 }
 
 repositories {
@@ -36,7 +39,6 @@ dependencies {
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
-	testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
 
 	testImplementation "org.codehaus.groovy:groovy-all:2.5.8"
 	testImplementation platform("org.spockframework:spock-bom:2.0-M1-groovy-2.5")
@@ -46,3 +48,41 @@ dependencies {
 test {
 	useJUnitPlatform()
 }
+
+//[BEGIN] Integration test configuration
+sourceSets {
+    intTest {
+        compileClasspath += sourceSets.main.output
+        runtimeClasspath += sourceSets.main.output
+    }
+}
+
+configurations {
+    intTestImplementation.extendsFrom implementation
+    intTestRuntimeOnly.extendsFrom runtimeOnly
+}
+
+dependencies {
+	intTestImplementation('org.springframework.boot:spring-boot-starter-test') {
+		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+	}
+	intTestImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
+	intTestImplementation "org.codehaus.groovy:groovy-all:2.5.8"
+	intTestImplementation platform("org.spockframework:spock-bom:2.0-M1-groovy-2.5")
+	intTestImplementation "org.spockframework:spock-core"
+	intTestImplementation group: 'org.spockframework', name: 'spock-spring', version: '1.3-groovy-2.5'
+
+}
+
+task integrationTest(type: Test) {
+    description = 'Runs integration tests.'
+    group = 'verification'
+
+    testClassesDirs = sourceSets.intTest.output.classesDirs
+    classpath = sourceSets.intTest.runtimeClasspath
+    shouldRunAfter test
+    useJUnitPlatform()
+}
+
+check.dependsOn integrationTest
+//[END] Integration test configuration
