--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.data.mongodb.host=${SPRING_DATA_MONGODB_HOST:localhost}
+spring.data.mongodb.port=${SPRING_DATA_MONGODB_PORT:27017}
+spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.username=${SPRING_DATA_MONGODB_USERNAME:}
+spring.data.mongodb.password=${SPRING_DATA_MONGODB_PASSWORD:}
+spring.data.mongodb.database=${SPRING_DATA_MONGODB_DATABASE:promotions}
