--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,10 @@ spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.username=${SPRING_DATA_MONGODB_USERNAME:}
 spring.data.mongodb.password=${SPRING_DATA_MONGODB_PASSWORD:}
 spring.data.mongodb.database=${SPRING_DATA_MONGODB_DATABASE:promotions}
+spring.data.web.pageable.size-parameter=size
+spring.data.web.pageable.page-parameter=page
+spring.data.web.pageable.default-page-size=20
+spring.data.web.pageable.one-indexed-parameters=true
+spring.data.web.pageable.max-page-size=2000
+spring.data.web.pageable.prefix=
+spring.data.web.pageable.qualifier-delimiter=_
